--- a/web/static/index.html
+++ b/web/static/index.html
@@ -55,6 +55,7 @@
     <script src="/static/lib/angular-moment/angular-moment.min.js"></script>
     <script src="/static/js/modules/zenNotify.js"></script>
     <script src="/static/js/modules/serviceHealth.js"></script>
+    <script src="/static/js/modules/servicesService.js"></script>
     <script src="/static/js/modules/modalService.js"></script>
     <script src="/static/js/modules/resourcesService.js"></script>
   </head>
